fix: fixed error of persisting an immutable list